--- a/templates/stats-embed.html
+++ b/templates/stats-embed.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style.css') }}"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <title>Watershed Cleanup - Statistics</title>
@@ -12,7 +23,9 @@
   <body class="embed">
     <div id="blue-bg">
       <table id="chart">
-        <caption id="caption">WATERSHED BRIGADE CUMALATIVE CLEAN-UP CHART {{ year }}</caption>
+        <caption id="caption">
+          WATERSHED BRIGADE CUMALATIVE CLEAN-UP CHART
+        </caption>
         <tr>
           <th id="month-heading" class="chart-headings">MONTH</th>
           <th class="chart-headings" id="gradient-one"># OF SITES CLEANED</th>
